# eclair-python

./: LICENSE  Makefile  README.md  pyproject.toml
eclair_python/: add.c  bindings.py  compile.sh
tests/: test_suite.py
tests/fixtures/: compile.sh  path.eclair  path.ll
