[tool.poetry]
name = "eclair-python"
version = "0.1.0"
description = ""
authors = ["Luc Tielen <luc.tielen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
black = "^24.4.2"
isort = "^5.13.2"

[tool.isort]
profile="black"
line_length = 100
skip = []

[tool.black]
line-length = 100
target-version = ["py310", ]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.aws-sam
  )/
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
